src/app/welcome/welcome.component.css
@keyframes slideInLeft {
  0% {
    transform: translateX(-100%);
  } 100% {
    transform: translateX(0);
  }
}

@keyframes slideInDown {
  0% {
    transform: translateY(-100%);
  } 100% {
    transform: translateY(0%)
  }
}

.title {
  color: rgba(255, 255, 255, 0.8);
  margin: 0;
  animation: 1.5s ease-out 0s 1 slideInDown;
}

.name {
  color: rgba(255, 255, 255, 0.6);
  font-size: 64px;
  line-height: 0.9em;
  margin: 0;
  animation: 1.5s ease-out 0s 1 slideInLeft;
}

.btn-container {
  display: flex;
  justify-content: center;
}

.resume-btn {
  margin-top: 1em;
  background-color: transparent;
  border-style: solid;
  border-width: 3px;
  border-color: #333333;
  color: #333333;
  font-size: large;
  font-weight: 600;
  transition: all 0.3s ease-in-out;
}

.resume-btn:hover {
  background-color: #333333;
  color: white;
  border-color: white;
}


/* Small screens */
@media screen and (max-width: 700px) {
  .name {
    font-size: 48px;
  }
}

